<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMenuActivity"
    tools:context="com.dodge.janken.Mainmenu">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button1"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/colorPrimary"
            android:onClick="onButton1"
            android:text="@string/nomal_mode" />

        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorPrimary"
            android:onClick="onButton2"
            android:text="@string/ten_th_mode" />


        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/colorPrimary"
            android:onClick="onButton4"
            android:text="@string/data" />

        <Button
            android:id="@+id/button5"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorPrimary"
            android:onClick="onButton5"
            android:text="@string/update" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/text_title"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/textView"
        app:srcCompat="@drawable/image2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/image1" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView6"
        android:layout_toStartOf="@+id/textView"
        app:srcCompat="@drawable/image0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="Ver.4.3.3" />

</RelativeLayout>
